kube/deployment.yaml
apiVersion: apps/v1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: emojiart
  namespace: default
  labels:
    app: emojiart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emojiart
  template:
    metadata:
      labels:
        app: emojiart
    spec:
      containers:
        - name: emojiart
          image: unrufflednightingale/emoji-art:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
