kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emojiart
  namespace: default
  labels:
    app: emojiart
spec:
  selector:
    app: emojiart
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
